<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/inspectionListFragment">

    <!-- Inspection List -->
    <fragment
        android:id="@+id/inspectionListFragment"
        android:name="com.metalinspect.app.presentation.inspection.list.InspectionListFragment"
        android:label="@string/nav_inspections"
        tools:layout="@layout/fragment_inspection_list">
        
        <action
            android:id="@+id/actionInspectionsToCreateInspection"
            app:destination="@id/createInspectionFragment" />
        
        <action
            android:id="@+id/actionInspectionsToInspectionDetail"
            app:destination="@id/inspectionDetailFragment" />
    
    </fragment>

    <!-- Create Inspection -->
    <fragment
        android:id="@+id/createInspectionFragment"
        android:name="com.metalinspect.app.presentation.inspection.create.CreateInspectionFragment"
        android:label="@string/create_inspection"
        tools:layout="@layout/fragment_create_inspection">
        
        <action
            android:id="@+id/actionCreateToInspectionDetail"
            app:destination="@id/inspectionDetailFragment" />
    
    </fragment>

    <!-- Inspection Detail -->
    <fragment
        android:id="@+id/inspectionDetailFragment"
        android:name="com.metalinspect.app.presentation.inspection.detail.InspectionDetailFragment"
        android:label="Inspection Details"
        tools:layout="@layout/fragment_inspection_detail">
        
        <argument
            android:name="inspectionId"
            app:argType="string" />
        
        <action
            android:id="@+id/actionDetailToCamera"
            app:destination="@id/inspectionCameraFragment" />
        
        <action
            android:id="@+id/actionDetailToGallery"
            app:destination="@id/photoGalleryFragment" />
    
    </fragment>

    <!-- Camera -->
    <fragment
        android:id="@+id/inspectionCameraFragment"
        android:name="com.metalinspect.app.presentation.camera.InspectionCameraFragment"
        android:label="@string/nav_camera"
        tools:layout="@layout/fragment_inspection_camera">
        
        <argument
            android:name="inspectionId"
            app:argType="string" />
    
    </fragment>

    <!-- Photo Gallery -->
    <fragment
        android:id="@+id/photoGalleryFragment"
        android:name="com.metalinspect.app.presentation.gallery.PhotoGalleryFragment"
        android:label="Photo Gallery"
        tools:layout="@layout/fragment_photo_gallery">
        
        <argument
            android:name="inspectionId"
            app:argType="string" />
    
    </fragment>

    <!-- Checklist -->
    <fragment
        android:id="@+id/checklistFragment"
        android:name="com.metalinspect.app.presentation.checklist.ChecklistFragment"
        android:label="Checklist"
        tools:layout="@layout/fragment_checklist">
        
        <argument
            android:name="inspectionId"
            app:argType="string" />
    
    </fragment>

    <!-- Inspector Profile -->
    <fragment
        android:id="@+id/inspectorProfileFragment"
        android:name="com.metalinspect.app.presentation.inspector.InspectorProfileFragment"
        android:label="Inspector Profile"
        tools:layout="@layout/fragment_inspector_profile" />

    <!-- Settings -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.metalinspect.app.presentation.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Reports -->
    <fragment
        android:id="@+id/reportListFragment"
        android:name="com.metalinspect.app.presentation.reports.ReportListFragment"
        android:label="@string/nav_reports" />

</navigation>